--- a/webstorage/requirements.txt
+++ b/webstorage/requirements.txt
@@ -6,10 +6,12 @@ Flask-Login==0.6.2
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.1.1
 greenlet==2.0.2
+gunicorn==21.2.0
 importlib-metadata==6.8.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+packaging==23.1
 PyJWT==2.8.0
 SQLAlchemy==2.0.21
 typing_extensions==4.8.0
